--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack",
-    "dev": "webpack-dev-server --open"
+    "dev": "webpack-dev-server --open",
+    "server": "babel-node src/server/server"
   },
   "keywords": [],
   "author": "",
@@ -18,9 +19,18 @@
     "@babel/preset-react": "^7.9.4",
     "@babel/register": "^7.9.0",
     "babel-loader": "^8.1.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "lodash": "^4.17.15",
+    "method-override": "^3.0.0",
+    "mongodb": "^3.5.7",
+    "morgan": "^1.10.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "winston": "^3.2.1",
+    "winston-loggly": "^1.3.1"
   },
   "dependencies": {
     "react": "^16.13.1",
@@ -29,6 +39,7 @@
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-immutable-state-invariant": "^2.1.0",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   }
 }
